--- a/project/swiftui-concepts/creating-a-custom-input-control-that-binds-to-a-value.yml
+++ b/project/swiftui-concepts/creating-a-custom-input-control-that-binds-to-a-value.yml
@@ -9,7 +9,7 @@
   翻译: 'SwiftUI提供了一些与特定值绑定的输入控制组件，例如滑动条，文本输入框等。这些组件的值会随着用户与其交互而改变。但是每个应用都是独一无二的。你可能会发现，你需要一个自定义控件来提供你的应用所特有的交互行为。'
 - 内容: 'SwiftUI provides the building blocks you need to create a custom input control for your app. This tutorial walks through an example of one such control, a rating control. The sample app uses this control to let people rate recipes from 1 to 5 stars.'
   提示: ''
-  翻译: 'SwiftUI提供了你为你的应用创建自定义输入控件所需要的构建组件。本教程讲介绍这样控件的一个例子，也就是一个评级控件。该案例应用通过这个控件让用户给菜谱从 1 到 5 星评分'
+  翻译: 'SwiftUI 提供了为你的应用创建自定义输入控件所需要的构建组件。本教程将介绍这样的控件的一个例子，也就是一个评级控件。该案例应用通过这个控件让用户给菜谱从 1 到 5 星评分'
 - 内容: 'To experiment with the code, download the project files and open the sample in Xcode.'
   提示: ''
   翻译: '如果要亲自尝试代码，请下载项目文件，并在Xcode中打开案例。'
