fix trans problem

--- a/project/swiftui-concepts/creating-a-custom-input-control-that-binds-to-a-value.yml
+++ b/project/swiftui-concepts/creating-a-custom-input-control-that-binds-to-a-value.yml
@@ -108,7 +108,7 @@
   翻译: 'StarRating 能够显示一组星星来表示对一个食谱的评级。例如，如果菜谱的等级是4，该控件就会显示四颗填充的星和一颗空星。为了使 StarRating 具有交互性，我们使用了 onTapGesture(count:perform:) 动作。'
 - 内容: 'To make it possible for a person to interact with the rating control, StarRating adds the onTapGesture(count:perform:) action to each Image instance created in the ForEach loop.'
   提示: ''
-  翻译: '为了使用户于评分空间交互成为肯，Star Rating 给每个在 ForEach 循环中创建的 Image 实例添加了 onTapGesture(count:perform:) 动作。'
+  翻译: '为了使用户于评分空间交互成为可能，StarRating 给每个在 ForEach 循环中创建的 Image 实例添加了 onTapGesture(count:perform:) 动作。'
 - 内容: 'The tap gesture performs the action defined in the closure when a person clicks or taps a star Image instance. The star indicates the rating that StarRating assigns to the recipe. For example, if a person taps the fourth star, the recipe’s rating is set to 4. Tap the fourth star again and StarRating resets the recipe’s rating to 0 or no stars.'
   提示: ''
   翻译: '当一个人点击一个星星 Image 实例时，就会执行在 onTapGesture 的闭包中定义的动作。星星表示了用户通过 StarRating 分配给菜谱的评级。例如，如果一个人点了第四颗星，菜谱的评级就会被设置为 4。再点第四颗星，StarRating 就会将菜谱的评级重置为 0 级。'
@@ -117,7 +117,7 @@
   翻译: '当 value 不等于 rating 时，闭包将 rating 设置为 value 的值，这表示用户给菜谱设置了一个新评级。'
 - 内容: 'By setting rating to the integer value, StarRating updates its appearance to show filled stars up to the number identified by value, followed by empty stars up to the number identified by maxRating.'
   提示: ''
-  翻译: '通过设置 rating 的值，StarRating 更新了它的外观，以显示 value 所确定的填充星星数，和 value 和 maxRating所确定的空星星数。'
+  翻译: '通过设置 rating 的值，StarRating 更新了它的外观，以显示 value 所确定的填充星星数，和 value 和 maxRating 所确定的空星星数。'
 - 内容: 'When the integer value is equal to the rating value, the closure resets the recipe’s rating to no stars by setting rating to 0.'
   提示: ''
   翻译: '当 value 等于 rating 的值时，闭包通过将 rating 设置为 0，以将评级设置为无星。'
@@ -147,7 +147,7 @@
   翻译: '视图与自定义控件 StarRating 共享对配方评级属性的绑定，这使控件可以读取和写入该属性。'
 - 内容: 'As a person interacts with the StarRating control, SwiftUI redraws the view to reflect the selected rating.'
   提示: ''
-  翻译: '当一个人与 StarRating 控件互动时，SwiftUI会重新绘制视图以反映所选的评级。'
+  翻译: '当一个人与 StarRating 控件互动时，SwiftUI 会重新绘制视图以反映所选的评级。'
 - 内容: 'The dollar sign ($) prefix on the variable name recipe indicates that the call is passing a binding to StarRating.'
   提示: ''
   翻译: '变量名称 recipe 上的美元符号（$）前缀表明，该调用正在向 StarRating 传递一个绑定值。'
