--- a/project/swiftui-concepts/creating-a-custom-input-control-that-binds-to-a-value.yml
+++ b/project/swiftui-concepts/creating-a-custom-input-control-that-binds-to-a-value.yml
@@ -63,7 +63,7 @@
   翻译: '在 HStack中，使用了一个 ForEach 结构来显示星星，星星的数量与常量 maxRating 一样。'
 - 内容: 'ForEach iterates through a collection of data defined as a range of Int instances, 1 to 5.'
   提示: ''
-  翻译: 'ForEach遍历了一个由从一到五 Int 实例组成的数据集合。'
+  翻译: 'ForEach 遍历了一个由从一到五 Int 实例组成的数据集合。'
 - 内容: 'Important'
   提示: ''
   翻译: '重要提示'
@@ -90,7 +90,7 @@
   翻译: '第八步'
 - 内容: 'The control displays a filled star when the integer value is less than or equal to the rating value and an empty star when the integer value is greater than rating, so the control applies the symbolVariant(_:) modifier to the Image instance.'
   提示: ''
-  翻译: '当 value 数值小于或等于 ratting 值时，控件会显示一个填充的星星，当 value 值大于 ratting 值时，会显示一个空的星星，所以控件对 Image 实例应用了 symbolVariant(_:) 修改器来修改图片的填充。'
+  翻译: '当 value 数值小于或等于 ratting 值时，控件会显示一个填充的星星，当 value 值大于 ratting 值时，会显示一个空的星星，所以控件对 Image 实例应用了 symbolVariant(_:) 修改器来修改图片的填充状态。'
 - 内容: 'To determine which SymbolVariants to apply, fill or none, the control uses a ternary conditional operator. This operator takes three parts, which takes the form of question ? answer1 : answer2. For more information, see Ternary Conditional Operator.'
   提示: ''
   翻译: '为了确定应用哪种 SymbolVariants，也就是填充还是不填充，该控件使用了一个三元运算符。这个运算符有三个部分，其形式为 question ? answer1 : answer2。更多信息，请参见三元条件运算符。'
