--- a/project/swiftui-concepts/maintaining-the-adaptable-sizes-of-built-in-views.yml
+++ b/project/swiftui-concepts/maintaining-the-adaptable-sizes-of-built-in-views.yml
@@ -109,7 +109,8 @@
     for your app. These can vary from product images for a shopping app, achievements
     for a game, or a dynamic background pattern you create by layering and aligning
     various shapes.
-  提示: '像是图片和形状这样的图形元素，可以为你的 app 提升视觉效果。这些可以是某个购物 app 的产品图片、游戏中的成就、或通过叠加和对齐各种形状而创建的动态背景图案。'
+  提示: ''
+  翻译: '像是图片和形状这样的图形元素，可以为你的 app 提升视觉效果。这些可以是某个购物 app 的产品图片、游戏中的成就、或通过叠加和对齐各种形状而创建的动态背景图案。'
 - 内容: Images
   提示: ''
   翻译: '图片'
